Backend/infrastructure/kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: kafka
          image: kafka-placeholder
